--- a/index.html
+++ b/index.html
@@ -386,10 +386,7 @@
           ></a>
         </div>
         <div class="text-center">
-          <p class="content">
-            &copy; 2022 - Anthony Adam | Design By
-            <a href="https://themefisher.com/" target="_blank">Themefisher</a>
-          </p>
+          <p class="content">&copy; 2022 - Anthony Adam</p>
         </div>
       </div>
     </footer>
