--- a/author.html
+++ b/author.html
@@ -130,27 +130,34 @@
                       <ul
                         class="list-inline social-icons ml-auto mr-3 d-none d-sm-block"
                       >
-                        <li class="list-inline-item">
+                        <!-- <li class="list-inline-item">
+                          <a
+                            target="_blank"
+                            href="https://github.com/antadam127/"
+                            ><i class="bi-github"></i
+                          ></a>
+                        </li> -->
+                        <!-- <li class="list-inline-item">
                           <a
                             target="_blank"
                             href="https://www.facebook.com/anthony.adam.39750"
                             ><i class="ti-facebook"></i
                           ></a>
-                        </li>
-                        <li class="list-inline-item">
+                        </li> -->
+                        <!-- <li class="list-inline-item">
                           <a
                             target="_blank"
                             href="https://twitter.com/antadam127"
                             ><i class="ti-twitter-alt"></i
                           ></a>
-                        </li>
-                        <li class="list-inline-item">
+                        </li> -->
+                        <!-- <li class="list-inline-item">
                           <a
                             target="_blank"
                             href="https://www.instagram.com/anthony_a20/"
                             ><i class="bi bi-instagram"></i
                           ></a>
-                        </li>
+                        </li> -->
                       </ul>
                     </div>
                   </div>
@@ -200,25 +207,28 @@
                         <article class="mb-5">
                         <div class="post-slider slider-sm">
                           <img
+                          onclick="(function(){window.location.href = 'post.html?r=${art.id}';})();"
                           loading="lazy"
                           src="images/posts/${art.id}/image_1.jpg"
                           class="img-fluid"
                           alt="${art.id}_image_1"
-                          style="aspect-ratio: 5/3; object-fit: cover;"
+                          style="aspect-ratio: 5/3; object-fit: cover; cursor: pointer;"
                           />
                           <img
+                          onclick="(function(){window.location.href = 'post.html?r=${art.id}';})();"
                           loading="lazy"
                           src="images/posts/${art.id}/image_2.jpg"
                           class="img-fluid"
                           alt="${art.id}_image_2"
-                          style="aspect-ratio: 5/3; object-fit: cover;"
+                          style="aspect-ratio: 5/3; object-fit: cover; cursor: pointer;"
                           />
                           <img
+                          onclick="(function(){window.location.href = 'post.html?r=${art.id}';})();"
                           loading="lazy"
                           src="images/posts/${art.id}/image_3.jpg"
                           class="img-fluid"
                           alt="${art.id}_image_3"
-                          style="aspect-ratio: 5/3; object-fit: cover;"
+                          style="aspect-ratio: 5/3; object-fit: cover; cursor: pointer;"
                           />
                         </div>
                         <h3 class="h5">
