--- a/index.html
+++ b/index.html
@@ -136,8 +136,12 @@
                 asList = true;
                 tag = urlParams.get("t");
               }
+              if (!asList) {
+                slickOptions.autoplaySpeed = 4000;
+                slickOptions.fade = false;
+              }
 
-              function appendMain(art, i, noSlide) {
+              function appendMain(art, i, notInit) {
                 const maxWords = 45;
                 $("#main-cont-ua").append(
                   $(`
@@ -190,18 +194,21 @@
                   </article>
                   `)
                 );
-                for (let ii = 1; ii <= (noSlide ? 1 : 3); ii++) {
+                if (notInit)
+                  $(`#slide-cont-${i}-ua`).addClass("post-slider-notInit");
+                for (let ii = 1; ii <= 3; ii++) {
                   $(`#slide-cont-${i}-ua`).append(
                     $(`
                      <img
+                     onclick="(function(){window.location.href = 'post.html?r=${art.id}';})();"
                      loading="lazy"
                      src="images/posts/${art.id}/image_${ii}.jpg"
                      class="img-fluid"
                      alt="${art.id}_image_${ii}"
                      ${
                        asList
-                         ? 'style="height: 200px; object-fit: cover"'
-                         : 'style="aspect-ratio: 5/3; object-fit: cover;"'
+                         ? 'style="height: 200px; object-fit: cover; cursor: pointer;"'
+                         : 'style="aspect-ratio: 5/3; object-fit: cover; cursor: pointer;"'
                      }
                      />
                      `)
@@ -366,6 +373,8 @@
         for (let inx2 = limitAmt; inx2 < mainContent.length; inx2++) {
           appendMain(mainContent[inx2], inx2, true);
         }
+        // Initialize New Sliders
+        $(".post-slider-notInit").slick(slickOptions);
       }
     </script>
 
