--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
     <!--Favicon-->
     <link rel="icon" href="images/favicon.svg" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="https://cdn.worldvectorlogo.com/logos/club-brugge.svg" type="image/x-icon" />
+    <link rel="apple-touch-startup-image" href="https://cdn.worldvectorlogo.com/logos/linn-logo.svg" type="image/x-icon" />
 
     <!-- ADDED -->
     <link
