--- a/index.html
+++ b/index.html
@@ -71,11 +71,8 @@
           <div class="col-md-2 col-sm-1"></div>
           <div class="col-md-8 col-sm-10">
             <h1 class="tm-home-title"><strong>John White</strong></h1>
-            <h2 class="tm-home-subtitle">Creative Director</h2>
-            <p>
-              I am a professional <strong>UX Designer</strong> and <strong>Front-End Developer</strong> creating modern and responsive designs for
-              <strong>Web</strong> and <strong>Mobile</strong>. Let us work together. Thank you.
-            </p>
+            <h2 class="tm-home-subtitle">Subtitle</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, <strong>adipisicing elit.</strong> Ratione voluptatem maiores nulla. Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, Thank you.</p>
             <a href="#work" class="btn btn-default smoothScroll tm-view-more-btn">Let's Begin</a>
           </div>
           <div class="col-md-2 col-sm-1"></div>
@@ -94,7 +91,7 @@
           <div class="col-md-4 col-sm-4">
             <div class="work-wrapper">
               <i class="fa fa-link"></i>
-              <h3 class="text-uppercase tm-work-h3">Mobile UX</h3>
+              <h3 class="text-uppercase tm-work-h3">First One</h3>
               <hr />
               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna.</p>
             </div>
@@ -102,7 +99,7 @@
           <div class="col-md-4 col-sm-4">
             <div class="work-wrapper">
               <i class="fa fa-flash"></i>
-              <h3 class="text-uppercase tm-work-h3">Web Design</h3>
+              <h3 class="text-uppercase tm-work-h3">Second</h3>
               <hr />
               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna.</p>
             </div>
@@ -110,7 +107,7 @@
           <div class="col-md-4 col-sm-4">
             <div class="work-wrapper">
               <i class="fa fa-dashboard"></i>
-              <h3 class="text-uppercase tm-work-h3">HTML Templates</h3>
+              <h3 class="text-uppercase tm-work-h3">Third Item</h3>
               <hr />
               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna.</p>
             </div>
@@ -157,38 +154,18 @@
           </div>
           <div class="col-md-6 col-sm-6">
             <h2 class="title"><strong>Some</strong> Skills</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.
-            </p>
-            <h4 class="tm-progress-label">Bootstrap <small class="progress-percent-small">100%</small></h4>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
+            <h4 class="tm-progress-label">Skill One <small class="progress-percent-small">100%</small></h4>
             <div class="progress tm-progress">
-              <div
-                class="progress-bar progress-bar-danger"
-                role="progressbar"
-                aria-valuenow="100"
-                aria-valuemin="0"
-                aria-valuemax="100"
-                style="width: 100%"></div>
+              <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
             </div>
-            <h4 class="tm-progress-label">HTML5 <small class="progress-percent-small">90%</small></h4>
+            <h4 class="tm-progress-label">Two Here <small class="progress-percent-small">90%</small></h4>
             <div class="progress tm-progress">
-              <div
-                class="progress-bar progress-bar-danger"
-                role="progressbar"
-                aria-valuenow="90"
-                aria-valuemin="0"
-                aria-valuemax="100"
-                style="width: 90%"></div>
+              <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
             </div>
-            <h4 class="tm-progress-label">SEO <small class="progress-percent-small">80%</small></h4>
+            <h4 class="tm-progress-label">Three <small class="progress-percent-small">80%</small></h4>
             <div class="progress tm-progress">
-              <div
-                class="progress-bar progress-bar-danger"
-                role="progressbar"
-                aria-valuenow="80"
-                aria-valuemin="0"
-                aria-valuemax="100"
-                style="width: 80%"></div>
+              <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
             </div>
           </div>
         </div>
@@ -203,16 +180,12 @@
           <div class="col-md-offset-6 col-md-6 col-sm-offset-6 col-sm-7">
             <div class="title">
               <h2>This is <strong>me</strong></h2>
-              <h1 class="tm-red-text">Creative <strong>Director</strong></h1>
+              <h1 class="tm-red-text">Something <strong>Here</strong></h1>
             </div>
             <p>
-              This is free Bootstrap v3.3.4 mobile friendly layout from <a rel="nofollow" href="https://templatemo.com">templatemo</a>. Feel free to use it for
-              your website. Credit goes to <a rel="nofollow" href="https://pixabay.com">Pixabay</a> for photos used in this template. Dolore magna aliquam erat
-              volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro laudantium reiciendis excepturi nostrum <a rel="nofollow" href="#">www.website.com</a> libero explicabo aliquam obcaecati pariatur sit ex quia praesentium sed atque necessitatibus corporis, distinctio, cumque iure mollitia.
             </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.
-            </p>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
           </div>
         </div>
       </div>
