--- a/not needed/index-tensorflow-imagerec-page.html
+++ b/not needed/index-tensorflow-imagerec-page.html
@@ -114,10 +114,10 @@
                     <span style="background-color: #ff5f57; border-radius: 50%; display: inline-block; margin: 10px 0 10px 12px; height: 12px; width: 12px"></span>
                     <span style="background-color: #ffbd2d; border-radius: 50%; display: inline-block; margin: 10px 0; height: 12px; width: 12px"></span>
                     <span style="background-color: #29c940; border-radius: 50%; display: inline-block; margin: 10px 0; height: 12px; width: 12px"></span>
-                    <a href="items/mapbox-config/index-mapbox-config.html?c=black-marble" target="_blank" class="readmore external-button" style="border-radius: 3px; border: 1px #dcdcdc solid; background-color: white; padding: 3px 6px; position: absolute; right: 12px; margin: 3px"><span class="bi bi-box-arrow-up-right" style="color: #216977"></span> </a>
+                    <a class="readmore external-button-greyed" style="border-radius: 3px; border: 1px #dcdcdc solid; background-color: white; padding: 3px 6px; position: absolute; right: 12px; margin: 3px"><span class="bi bi-box-arrow-up-right" style="color: #216977"></span> </a>
                   </div>
                   <div style="width: 100%" class="ratio ratio-1x1">
-                    <iframe defer src="items/mapbox-config/index-mapbox-config.html?c=black-marble" frameborder="0" style="border-radius: 0 0 6px 6px; width: 100%; height: 100%"></iframe>
+                    <iframe defer src="items/object classification/index.html?iframe=true" frameborder="0" style="border-radius: 0 0 6px 6px; width: 100%; height: 100%"></iframe>
                   </div>
                 </div>
               </div>
