--- a/portfolio/items/Global State College Blog/index.html
+++ b/portfolio/items/Global State College Blog/index.html
@@ -227,7 +227,7 @@
               const tags = ["Chinese", "Coffee", "Hawaiian", "Indian", "Japanese", "Lebanese", "Market", "Mediterranean", "Mexican", "Middle Eastern", "Tea", "Vietnamese"];
               const tagCont = $("#tags-cont-ua");
               for (const t of tags) {
-                tagCont.append($(`<li class="list-inline-item"><a href="index.html?t=${t}">${t}</a></li>`));
+                tagCont.append(`<li class="list-inline-item"><a href="index.html?t=${t}">${t}</a></li>`);
               }
             </script>
 
