--- a/portfolio/items/index-linkedin.html
+++ b/portfolio/items/index-linkedin.html
@@ -9,6 +9,7 @@
       href="https://cdn0.iconfinder.com/data/icons/thin-travel-places/24/thin-0509_globus_world_travel_regional-32.png"
       defer /> -->
     <!-- <link rel="icon" href="../../../img/icon.png" /> -->
+    <link rel="icon" href="mapbox-config/icon.svg" type="image/x-icon" />
     <title>Anthony Adam | LinkedIn Analysis</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
     <!-- Mapbox Required -->
