--- a/portfolio/items/Global State College Blog/index.html
+++ b/portfolio/items/Global State College Blog/index.html
@@ -38,6 +38,15 @@
       gtag("config", "G-2466715FY8");
     </script>
     <!-- GOOGLE ANALYTICS -->
+    <!-- Quicklink -->
+    <script src="https://unpkg.com/quicklink"></script>
+    <script>
+      window.addEventListener("load", () => {
+        quicklink.listen();
+        console.log("Quicklink Listening");
+      });
+    </script>
+    <!-- Quicklink -->
 
     <!-- CHECK IFRAME STATUS -->
     <style id="scroll-style">
