--- a/portfolio/index-page.html
+++ b/portfolio/index-page.html
@@ -35,6 +35,16 @@
       gtag("js", new Date());
       gtag("config", "G-2466715FY8");
     </script>
+    <!-- GOOGLE ANALYTICS -->
+    <!-- Quicklink -->
+    <script src="https://unpkg.com/quicklink"></script>
+    <script>
+      window.addEventListener("load", () => {
+        quicklink.listen();
+        console.log("Quicklink Listening");
+      });
+    </script>
+    <!-- Quicklink -->
 
     <!-- https://bootstrapmade.com/myportfolio-bootstrap-portfolio-website-template/ -->
     <link href="https://cdn.jsdelivr.net/npm/prismjs@1.24.1/themes/prism.css" rel="stylesheet" />
@@ -76,7 +86,7 @@
           <div class="col-12 col-sm-3 col-lg-2">
             <ul class="custom-menu">
               <li>
-                <a id="nav4" class="inherit hover-underline" href="../index.html#contact">About</a>
+                <a id="nav4" class="inherit hover-underline" href="../index.html?jumpto=contact">About</a>
               </li>
             </ul>
           </div>
@@ -108,12 +118,10 @@
               <div class="col-md-8" data-aos="fade-up">
                 <div class="shadow-wrap" style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; border-radius: 6px">
                   <div style="background: #ececec; height: 32px; width: 100%; border-radius: 6px 6px 0 0">
-                    <span style="background-color: #ff5f57; border-radius: 50%; display: inline-block; margin: 10px 0 10px 12px; height: 12px; width: 12px"></span>
+                    <span id="redX" style="background-color: #ff5f57; border-radius: 50%; display: inline-block; margin: 10px 0 10px 12px; height: 12px; width: 12px"></span>
                     <span style="background-color: #ffbd2d; border-radius: 50%; display: inline-block; margin: 10px 0; height: 12px; width: 12px"></span>
                     <span style="background-color: #29c940; border-radius: 50%; display: inline-block; margin: 10px 0; height: 12px; width: 12px"></span>
-                    <a id="mod3" target="_blank" class="readmore" style="border-radius: 3px; border: 1px #dcdcdc solid; background-color: white; padding: 3px 6px; position: absolute; right: 12px; margin: 3px"
-                      ><span class="bi bi-box-arrow-up-right" style="color: #216977"></span
-                    ></a>
+                    <a id="mod3" target="_blank" class="readmore" style="border-radius: 3px; border: 1px #dcdcdc solid; background-color: white; padding: 3px 6px; position: absolute; right: 12px; margin: 3px"><span class="bi bi-box-arrow-up-right" style="color: #216977"></span></a>
                   </div>
                   <div id="main-content" style="width: 100%" class="ratio ratio-4x3">
                     <!-- <iframe defer src="items/mapbox-config/index-mapbox-config.html?c=black-marble&iframe=true" frameborder="0" style="border-radius: 0 0 6px 6px; width: 100%; height: 100%"></iframe> -->
@@ -213,10 +221,10 @@
       <div class="container">
         <div class="row">
           <div class="col custom-social text-center">
-            <a class="readmore" href="mailto:anthonyadam.psu@gmail.com"><span class="bi bi-envelope-fill"></span></a>
-            <a class="readmore" href="https://www.linkedin.com/in/anthony-adam-psu/" target="_blank"><span class="bi bi-linkedin"></span></a>
-            <a class="readmore" href="https://github.com/antadam127" target="_blank"><span class="bi bi-github"></span></a>
-            <a class="readmore" href="portfolio/Anthony Adam - Resume.pdf" target="_blank"><span class="bi bi-file-earmark-pdf-fill"></span></a>
+            <a title="Send Email" class="readmore" href="mailto:anthonyadam.psu@gmail.com"><span class="bi bi-envelope-fill"></span></a>
+            <a title="LinkedIn" class="readmore" href="https://www.linkedin.com/in/anthony-adam-psu/" target="_blank"><span class="bi bi-linkedin"></span></a>
+            <a title="Github" class="readmore" href="https://github.com/antadam127" target="_blank"><span class="bi bi-github"></span></a>
+            <a title="Download Resume" class="readmore" href="resumes/Anthony Adam - Resume.pdf" target="_blank"><span class="bi bi-file-earmark-pdf-fill"></span></a>
           </div>
         </div>
       </div>
