--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
 
     <!-- More -->
     <script src="portfolio/portfolioSet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js" integrity="sha512-+Ru50BzEpZjlFzVnjSmJfYFPFfY2hS0Kjlu/IvqaJoux7maF5lJrRVUJWJ2LevPls7rd242GLbWEt+zAo4OVVQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="portfolio/script.js"></script>
 
     <!-- Vendor JS Files -->
