--- a/portfolio/items/object classification/index.html
+++ b/portfolio/items/object classification/index.html
@@ -26,6 +26,9 @@
       body::-webkit-scrollbar-thumb {
         background: #888;
       }
+      body {
+        background-color: white;
+      }
 
       .fullscreen {
         position: absolute;
