--- a/portfolio/index-page.html
+++ b/portfolio/index-page.html
@@ -115,15 +115,16 @@
         <div class="site-section pb-0">
           <div class="container">
             <div class="row align-items-stretch">
-              <div class="col-md-8" data-aos="fade-up">
-                <div class="shadow-wrap" style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; border-radius: 6px">
+              <div class="col-md-8 full-screen-wrapper" data-aos="fade-up">
+                <div class="shadow-wrap" style="height: 100%; box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; border-radius: 6px">
                   <div style="background: #ececec; height: 32px; width: 100%; border-radius: 6px 6px 0 0">
                     <span id="redX" style="background-color: #ff5f57; border-radius: 50%; display: inline-block; margin: 10px 0 10px 12px; height: 12px; width: 12px"></span>
                     <span style="background-color: #ffbd2d; border-radius: 50%; display: inline-block; margin: 10px 0; height: 12px; width: 12px"></span>
                     <span style="background-color: #29c940; border-radius: 50%; display: inline-block; margin: 10px 0; height: 12px; width: 12px"></span>
-                    <a id="mod3" target="_blank" class="readmore" style="border-radius: 3px; border: 1px #dcdcdc solid; background-color: white; padding: 3px 6px; position: absolute; right: 12px; margin: 3px"><span class="bi bi-box-arrow-up-right" style="color: #216977"></span></a>
+                    <!-- <a id="mod3" target="_blank" class="readmore" style="border-radius: 3px; border: 1px #dcdcdc solid; background-color: white; padding: 3px 6px; position: absolute; right: 12px; margin: 3px"><span class="bi bi-box-arrow-up-right" style="color: #216977"></span></a> -->
+                    <span id="mod3" class="readmore" style="border-radius: 3px; border: 1px #dcdcdc solid; background-color: white; padding: 3px 6px; position: absolute; right: 12px; margin: 3px"><span class="bi bi-fullscreen" style="color: #216977"></span></span>
                   </div>
-                  <div id="main-content" style="width: 100%" class="ratio ratio-4x3">
+                  <div id="main-content" style="width: 100%; height: calc(100% - 32px);" class="ratio ratio-4x3">
                     <!-- <iframe defer src="items/mapbox-config/index-mapbox-config.html?c=black-marble&iframe=true" frameborder="0" style="border-radius: 0 0 6px 6px; width: 100%; height: 100%"></iframe> -->
                   </div>
                 </div>
