--- a/portfolio/index-page.html
+++ b/portfolio/index-page.html
@@ -116,7 +116,7 @@
           <div class="container">
             <div class="row align-items-stretch">
               <div class="col-md-8 full-screen-wrapper" data-aos="fade-up">
-                <div class="shadow-wrap" style="height: 100%; box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; border-radius: 6px">
+                <div class="shadow-wrap" style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; border-radius: 6px">
                   <div style="background: #ececec; height: 32px; width: 100%; border-radius: 6px 6px 0 0">
                     <span id="redX" style="background-color: #ff5f57; border-radius: 50%; display: inline-block; margin: 10px 0 10px 12px; height: 12px; width: 12px"></span>
                     <span style="background-color: #ffbd2d; border-radius: 50%; display: inline-block; margin: 10px 0; height: 12px; width: 12px"></span>
@@ -132,7 +132,7 @@
               <!-- <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100"> -->
               <div class="col-md-4 ml-auto" data-aos="fade-up" data-aos-delay="100">
                 <div class="sticky-content">
-                  <h3 id="mod5" class="h3"></h3>
+                  <h3 id="mod5" class="h3 mt-md-0 mt-4"></h3>
                   <p id="mod6" class="mb-4">
                     <!-- <span class="text-muted"></span> -->
                   </p>
