--- a/portfolio/items/NBA Analysis/index.html
+++ b/portfolio/items/NBA Analysis/index.html
@@ -107,12 +107,12 @@
       #player-list li:hover {
         background-color: #f0f0f0;
         cursor: pointer;
-        padding-left: 14px;
+        padding-left: 14px !important;
       }
       .highlight {
         z-index: 999999;
         border: 2px solid #e6d83a !important;
-        padding: 8px 10px 9px 10px !important;
+        padding: 8px 8px 9px 8px !important;
         
 /* -webkit-box-shadow:0px 0px 4px 2px rgba(230,216,58,0.9);
 -moz-box-shadow: 0px 0px 4px 2px rgba(230,216,58,0.9);
