--- a/portfolio/items/NBA Analysis/index.html
+++ b/portfolio/items/NBA Analysis/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.7.0/nouislider.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.7.0/nouislider.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css" />
 
     <style>
       body {
@@ -113,11 +114,10 @@
         z-index: 999999;
         border: 2px solid #e6d83a !important;
         padding: 8px 8px 9px 8px !important;
-        
-/* -webkit-box-shadow:0px 0px 4px 2px rgba(230,216,58,0.9);
+
+        /* -webkit-box-shadow:0px 0px 4px 2px rgba(230,216,58,0.9);
 -moz-box-shadow: 0px 0px 4px 2px rgba(230,216,58,0.9);
 box-shadow: 0px 0px 4px 2px rgba(230,216,58,0.9); */
-
       }
 
       #current-players-filter {
@@ -213,6 +213,79 @@ box-shadow: 0px 0px 4px 2px rgba(230,216,58,0.9); */
         margin-bottom: 16px;
       }
 
+      /* SEARCH */
+      /* Style for the search container */
+      #search-container {
+        position: relative;
+        /* margin-bottom: 10px; */
+      }
+
+      /* Style for the search input */
+      #search-input {
+        width: calc(100% - 10px);
+        padding: 5px;
+        border: 1px solid #e0e0e0;
+        border-radius: 5px;
+        font-family: "Roboto", sans-serif;
+        font-size: 14px;
+        color: #333;
+        outline: none;
+      }
+
+      /* Style for the search icon */
+      #search-container .bi-search {
+        position: absolute;
+        top: 8px;
+        right: 10px;
+        font-size: 18px;
+        color: #333;
+        pointer-events: none;
+      }
+
+      /* Style for the search results dropdown */
+      #search-results {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        /* background-color: rgba(255, 255, 255, 0.8); */
+        background-color: white;
+        border-radius: 5px;
+        max-height: 200px;
+        overflow-y: auto;
+        position: absolute;
+        width: 100%;
+        z-index: 1001;
+      }
+
+      /* Style for the search results list items */
+      #search-results li {
+        padding: 5px;
+        border-bottom: 1px solid #e0e0e0;
+        font-size: 12px;
+      }
+
+      #search-results li:last-child {
+        border-bottom: none;
+      }
+
+      #search-results li:hover {
+        background-color: #f0f0f0;
+        cursor: pointer;
+      }
+
+      /* Style to hide the search results dropdown */
+      .hidden {
+        display: none;
+      }
+      .clear-search {
+        position: absolute;
+        right: 4px;
+        top: 50%;
+        transform: translateY(-50%);
+        cursor: pointer;
+        font-size: 18px;
+        color: #777;
+      }
     </style>
   </head>
   <body>
@@ -233,6 +306,12 @@ box-shadow: 0px 0px 4px 2px rgba(230,216,58,0.9); */
       </div>
 
       <h2>Players</h2>
+      <div id="search-container">
+        <input type="text" id="search-input" placeholder="Search players..." />
+        <i class="bi bi-x clear-search hidden"></i>
+        <ul id="search-results" class="hidden"></ul>
+      </div>
+
       <div id="scroll-container">
         <ul id="player-list">
           <!-- <li>LeBron James</li>
