--- a/portfolio/index-page.html
+++ b/portfolio/index-page.html
@@ -26,16 +26,27 @@
     <script src="../assets/js/jquery.js"></script>
 
     <!-- GOOGLE ANALYTICS -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2466715FY8"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "G-2466715FY8");
-    </script>
+    <!-- <script>
+      // Add "?developer=true" to skip loading Google Analytics
+      (function () {
+      if (new URLSearchParams(window.location.search).get("developer") !== "true") {
+        const script = document.createElement("script");
+        script.async = true;
+        script.src = "https://www.googletagmanager.com/gtag/js?id=G-2466715FY8";
+        document.head.appendChild(script);
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+          dataLayer.push(arguments);
+        }
+        gtag("js", new Date());
+        gtag("config", "G-2466715FY8");
+        console.log("Google Analytics loaded");
+      } else console.log("Google Analytics skipped (developer mode)");
+    })();
+  </script> -->
     <!-- GOOGLE ANALYTICS -->
+    <!-- SET UP GOOGLE ANALYTICS -->
+    <script src="../google-analytics.js"></script>
     <!-- Quicklink -->
     <script src="https://unpkg.com/quicklink"></script>
     <script>
@@ -124,7 +135,7 @@
                     <!-- <a id="mod3" target="_blank" class="readmore" style="border-radius: 3px; border: 1px #dcdcdc solid; background-color: white; padding: 3px 6px; position: absolute; right: 12px; margin: 3px"><span class="bi bi-box-arrow-up-right" style="color: #216977"></span></a> -->
                     <span id="mod3" class="readmore" style="border-radius: 3px; border: 1px #dcdcdc solid; background-color: white; padding: 3px 6px; position: absolute; right: 12px; margin: 3px"><span class="bi bi-fullscreen" style="color: #216977"></span></span>
                   </div>
-                  <div id="main-content" style="width: 100%; height: calc(100% - 32px);" class="ratio ratio-4x3">
+                  <div id="main-content" style="width: 100%; height: calc(100% - 32px)" class="ratio ratio-4x3">
                     <!-- <iframe defer src="items/mapbox-config/index-mapbox-config.html?c=black-marble&iframe=true" frameborder="0" style="border-radius: 0 0 6px 6px; width: 100%; height: 100%"></iframe> -->
                   </div>
                 </div>
