--- a/portfolio/items/Global State College Blog/author.html
+++ b/portfolio/items/Global State College Blog/author.html
@@ -29,17 +29,26 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 
     <!-- GOOGLE ANALYTICS -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2466715FY8"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "G-2466715FY8");
-    </script>
-    <!-- GOOGLE ANALYTICS -->
-    <!-- Quicklink -->
+      // Add "?developer=true" to skip loading Google Analytics
+      (function () {
+      if (new URLSearchParams(window.location.search).get("developer") !== "true") {
+        const script = document.createElement("script");
+        script.async = true;
+        script.src = "https://www.googletagmanager.com/gtag/js?id=G-2466715FY8";
+        document.head.appendChild(script);
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+          dataLayer.push(arguments);
+        }
+        gtag("js", new Date());
+        gtag("config", "G-2466715FY8");
+        console.log("Google Analytics loaded");
+      } else console.log("Google Analytics skipped (developer mode)");
+    })();
+  </script>
+  <!-- GOOGLE ANALYTICS -->
+  <!-- Quicklink -->
     <script src="https://unpkg.com/quicklink"></script>
     <script>
       window.addEventListener("load", () => {
