--- a/portfolio/items/Global State College Blog/index.html
+++ b/portfolio/items/Global State College Blog/index.html
@@ -27,27 +27,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" />
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 
-    <!-- GOOGLE ANALYTICS -->
-    <script>
-      // Add "?developer=true" to skip loading Google Analytics
-      (function () {
-      if (new URLSearchParams(window.location.search).get("developer") !== "true") {
-        const script = document.createElement("script");
-        script.async = true;
-        script.src = "https://www.googletagmanager.com/gtag/js?id=G-2466715FY8";
-        document.head.appendChild(script);
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {
-          dataLayer.push(arguments);
-        }
-        gtag("js", new Date());
-        gtag("config", "G-2466715FY8");
-        console.log("Google Analytics loaded");
-      } else console.log("Google Analytics skipped (developer mode)");
-    })();
-  </script>
-  <!-- GOOGLE ANALYTICS -->
-  <!-- Quicklink -->
+    <!-- SET UP GOOGLE ANALYTICS -->
+    <script src="../../../google-analytics.js"></script>
+    <!-- Quicklink -->
     <script src="https://unpkg.com/quicklink"></script>
     <script>
       window.addEventListener("load", () => {
