--- a/portfolio/items/NBA Analysis/index.html
+++ b/portfolio/items/NBA Analysis/index.html
@@ -8,6 +8,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.7.0/nouislider.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.7.0/nouislider.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css" />
+    <!-- SET UP GOOGLE ANALYTICS -->
+    <script src="../../../google-analytics.js"></script>
 
     <style>
       body {
