--- a/portfolio/items/object classification/index.html
+++ b/portfolio/items/object classification/index.html
@@ -5,27 +5,9 @@
     <meta charset="utf-8" />
     <!-- Import the webpage's stylesheet -->
     <link rel="stylesheet" href="style.css" />
-    <!-- GOOGLE ANALYTICS -->
-    <script>
-      // Add "?developer=true" to skip loading Google Analytics
-      (function () {
-      if (new URLSearchParams(window.location.search).get("developer") !== "true") {
-        const script = document.createElement("script");
-        script.async = true;
-        script.src = "https://www.googletagmanager.com/gtag/js?id=G-2466715FY8";
-        document.head.appendChild(script);
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {
-          dataLayer.push(arguments);
-        }
-        gtag("js", new Date());
-        gtag("config", "G-2466715FY8");
-        console.log("Google Analytics loaded");
-      } else console.log("Google Analytics skipped (developer mode)");
-    })();
-  </script>
-  <!-- GOOGLE ANALYTICS -->
-  <!-- CHECK IFRAME STATUS -->
+    <!-- SET UP GOOGLE ANALYTICS -->
+    <script src="../../../google-analytics.js"></script>
+    <!-- CHECK IFRAME STATUS -->
     <style id="scroll-style">
       /* Set Custom Attributes for Scrollbar */
       body::-webkit-scrollbar {
