--- a/portfolio/items/gpt chatbot/index.html
+++ b/portfolio/items/gpt chatbot/index.html
@@ -6,38 +6,46 @@
     <link href="../../../../assets/img/favicon.png" rel="icon" />
     <title>ChatGPT PDF Reader</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link rel="stylesheet" href="styles.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/msgpack5/5.0.0/msgpack5.min.js"></script>
     <!-- SET UP GOOGLE ANALYTICS -->
     <script src="../../../google-analytics.js"></script>
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center my-4">ChatGPT PDF Reader</h1>
+      <h1 class="text-center mt-4 mb-3">ChatGPT PDF Reader</h1>
       <!-- PDF Input Row -->
-      <!-- PDF Input Row -->
-      <div class="row mb-4 justify-content-center">
-        <div class="col-12 col-xl-10">
-          <div class="pdf-input d-flex flex-column">
-            <div class="d-flex align-items-center justify-content-center">
-              <i class="bi bi-file-earmark-pdf"></i>
-              <span>Drop PDF Here</span>
-            </div>
-            <div class="d-flex justify-content-between mt-2">
-              <a href="#" class="browse-computer">Browse from Computer</a>
-              <a href="#" class="from-url">From URL</a>
-            </div>
+      <div class="row justify-content-center pdf-row">
+        <div class="col-12 col-xl-10 d-flex flex-nowrap">
+          <div class="pdf-container"></div>
+          <div class="pdf-input">
+            <i class="bi bi-file-earmark-pdf"></i>
+            <span>Drop PDF Here</span>
           </div>
+        </div>
+      </div>
+      <div class="row mb-3 justify-content-center pdf-row">
+        <div class="col-12 col-xl-10 text-center mt-1">
+          <a href="#" class="browse-computer">Upload a File</a>
+          <span class="mx-2">|</span>
+          <a href="#" class="from-url">Add from URL</a>
         </div>
       </div>
 
       <!-- Chat Area -->
       <div class="row justify-content-center">
         <div class="col-12 col-xl-10">
-          <div class="chat-area">
-            <!-- Chat messages will be added here -->
+          <div class="chat-container">
+            <div class="chat-icons">
+              <i id="share-icon" class="bi bi-link-45deg" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Copy Chat Link"></i>
+              <i id="clear-icon" class="bi bi-trash3" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Clear Chat"></i>
+            </div>
+            <div class="chat-area">
+              <!-- Chat messages will be added here -->
+            </div>
           </div>
           <div class="chat-input-area">
             <input type="text" class="chat-input" placeholder="Type your message..." />
