--- a/portfolio/items/gpt chatbot/index.html
+++ b/portfolio/items/gpt chatbot/index.html
@@ -11,6 +11,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/msgpack5/5.0.0/msgpack5.min.js"></script>
+
+
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> -->
+<!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script> -->
+<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
+
     <!-- SET UP GOOGLE ANALYTICS -->
     <script src="../../../google-analytics.js"></script>
   </head>
@@ -40,7 +48,7 @@
         <div class="col-12 col-xl-10">
           <div class="chat-container">
             <div class="chat-icons">
-              <i id="share-icon" class="bi bi-link-45deg" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Copy Chat Link"></i>
+              <i id="share-icon" class="bi bi-link-45deg" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Copy Hash Link"></i>
               <i id="clear-icon" class="bi bi-trash3" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Clear Chat"></i>
             </div>
             <div class="chat-area">
@@ -56,6 +64,15 @@
         </div>
       </div>
     </div>
+
+    <!-- Clipboard Alert -->
+    <div class="toast" id="toast" style="position: fixed; top: 20px; right: 20px" data-delay="2000">
+      <div class="toast-header">
+        <strong class="mr-auto pt-1 mb-1">Success</strong>
+      </div>
+      <div class="toast-body">URL Hash copied to clipboard.</div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
