--- a/portfolio/items/gpt chatbot/index.html
+++ b/portfolio/items/gpt chatbot/index.html
@@ -4,27 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="../../../../assets/img/favicon.png" rel="icon" />
-    <title>ChatGPT PDF Reader</title>
+    <title>OpenAI PDF Reader</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/msgpack5/5.0.0/msgpack5.min.js"></script>
-
-
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> -->
-<!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script> -->
-<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
-
     <!-- SET UP GOOGLE ANALYTICS -->
     <script src="../../../google-analytics.js"></script>
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center mt-4 mb-3">ChatGPT PDF Reader</h1>
+      <!-- <h1 class="text-center mt-4 mb-3">OpenAI PDF Reader</h1> -->
+      <h1 class="text-center mt-4 mb-3">OpenAI PDF Reader</h1>
       <!-- PDF Input Row -->
       <div class="row justify-content-center pdf-row">
         <div class="col-12 col-xl-10 d-flex flex-nowrap">
