--- a/index.html
+++ b/index.html
@@ -98,11 +98,12 @@
       <section id="portfolio" class="section site-portfolio">
         <div class="container">
           <div class="row mb-5 align-items-center">
-            <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
+            <div class="col-md-12 col-lg-5 mb-4 mb-lg-0" data-aos="fade-up">
               <h2>Hi, I'm Anthony</h2>
-              <p class="mb-0">Data Analysis &amp; <strong>Visualization</strong></p>
+              <!-- <p class="mb-0">Data Analysis &amp; <strong>Visualization</strong></p> -->
+              <p class="mb-0">Business Analytics &amp; <strong>Visualization</strong></p>
             </div>
-            <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-md-12 col-lg-7 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
               <div id="filters" class="filters">
                 <a href="#" data-filter="*" class="active">All</a>
                 <!-- <a href="#" data-filter=".web">Web</a> -->
@@ -355,21 +356,41 @@
                 <ul class="list-unstyled">
                   <li class="mb-3">
                     <strong class="d-block mb-1">Education</strong>
-                    <span
+                    <!-- <span
                       >My name is Anthony Adam. I hold a Bachelor's Degree in <strong>Management Information Systems</strong> from
                       <a class="inherit-underline hover-inherit" href="https://www.psu.edu/this-is-penn-state/facts-and-rankings/" target="_blank">Penn State University</a>
                       with a focus in data analytics and geospatial analysis.</span
-                    >
+                    > -->
+                    <ul>
+                      <!-- <li>My name is Anthony Adam. I am from central Connecticut willing to work in most areas on the <strong>East Coast</strong>.</li> -->
+                      <li>
+                        I hold a Bachelor's Degree in <strong>Management Information Systems</strong> with a Minor in <strong>Digital Media Trends & Analytics</strong> from
+                        <a class="inherit-underline hover-inherit" href="https://bulletins.psu.edu/undergraduate/colleges/smeal-business/management-information-systems-bs/" target="_blank">Penn State University</a>
+                      </li>
+                      <li>
+                        I am actively pursuing my Master's of Science in <strong>Business Analytics & Project Management</strong> with a concentration in <strong>Business Data Science</strong> at the
+                        <a class="inherit-underline hover-inherit" href="https://msbapm.business.uconn.edu/?_gl=1*1gjo7bv*_gcl_au*MTEyMjc1MzAwOC4xNzA0OTQwNzQ0" target="_blank">University of Connecticut</a>
+                      </li>
+                      <!-- <li>I am seeking a challenging full-time role with reliable <strong>Growth Opportunities</strong>.</li> -->
+                    </ul>
                   </li>
                   <li class="mb-3">
-                    <strong class="d-block mb-1">Contact Me</strong>
-                    <span><a class="inherit hover-underline" href="mailto:anthonyadam.psu@gmail.com">anthonyadam.psu@gmail.com</a></span>
+                    <!-- <strong class="d-block mb-1">Seeking</strong> -->
+                    <span>I am seeking a challenging full-time role with reliable <strong>Growth Opportunities</strong>.</span>
+                  </li>
+                  <li class="mb-3">
+                    <!-- <strong class="d-block mb-1">Contact Me</strong> -->
+                    <!-- <span><a class="inherit hover-underline" href="mailto:anthonyadam.psu@gmail.com">anthonyadam.psu@gmail.com</a></span> -->
+                    <span><strong>Contact Me:</strong> <a class="inherit hover-underline" href="mailto:anthonyadam721@gmail.com">anthonyadam721@gmail.com</a></span>
                   </li>
                 </ul>
               </div>
             </div>
             <div class="col-12 col-md-6 p-4">
-              <div id="map" style="width: 100%; max-height: 390px" class="ratio ratio-1x1"></div>
+              <!-- <div id="map" style="width: 100%; max-height: 390px" class="ratio ratio-1x1"></div> -->
+              <!-- <div id="map" style="width: 100%; height: 100%; min-height: 300px"></div> -->
+              <!-- <div id="map" style="width: 100%; height: 100%"></div> -->
+              <a title="Download Resume" href="portfolio/resumes/Anthony Adam - Resume.pdf" target="_blank"><img src="portfolio/resumes/Anthony Adam - Resume.jpg" alt="Anthony Adam - Resume" style="width: 100%; height: 100%; max-height: 500px; object-fit: contain" /></a>
             </div>
           </div>
         </div>
@@ -383,9 +404,11 @@
       <div class="container">
         <div class="row">
           <div class="col custom-social text-center">
-            <a title="Send Email" class="readmore" href="mailto:anthonyadam.psu@gmail.com"><span class="bi bi-envelope-fill"></span></a>
+            <!-- <a title="Send Email" class="readmore" href="mailto:anthonyadam.psu@gmail.com"><span class="bi bi-envelope-fill"></span></a> -->
+            <a title="Send Email" class="readmore" href="mailto:anthonyadam721@gmail.com"><span class="bi bi-envelope-fill"></span></a>
             <a title="LinkedIn" class="readmore" href="https://www.linkedin.com/in/anthony-adam-psu/" target="_blank"><span class="bi bi-linkedin"></span></a>
             <a title="Github" class="readmore" href="https://github.com/antadam127" target="_blank"><span class="bi bi-github"></span></a>
+            <a title="Tableau" class="readmore" href="https://public.tableau.com/app/profile/anthony3165/vizzes" target="_blank"><span class="bi bi-bar-chart-line-fill"></span></a>
             <a title="Download Resume" class="readmore" href="portfolio/resumes/Anthony Adam - Resume.pdf" target="_blank"><span class="bi bi-file-earmark-pdf-fill"></span></a>
             <!-- <a title="View Resume" class="readmore" href="portfolio/resumes/Anthony Adam - Resume.html" target="_blank"><span class="bi bi-file-earmark-pdf-fill"></span></a> -->
           </div>
@@ -398,7 +421,7 @@
     <!-- More -->
     <script src="portfolio/portfolioSet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js" integrity="sha512-+Ru50BzEpZjlFzVnjSmJfYFPFfY2hS0Kjlu/IvqaJoux7maF5lJrRVUJWJ2LevPls7rd242GLbWEt+zAo4OVVQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="portfolio/script.js"></script>
+    <script src="script.js"></script>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/aos/aos.js"></script>
