--- a/portfolio/index-page.html
+++ b/portfolio/index-page.html
@@ -213,9 +213,11 @@
       <div class="container">
         <div class="row">
           <div class="col custom-social text-center">
-            <a title="Send Email" class="readmore" href="mailto:anthonyadam.psu@gmail.com"><span class="bi bi-envelope-fill"></span></a>
+            <!-- <a title="Send Email" class="readmore" href="mailto:anthonyadam.psu@gmail.com"><span class="bi bi-envelope-fill"></span></a> -->
+            <a title="Send Email" class="readmore" href="mailto:anthonyadam721@gmail.com"><span class="bi bi-envelope-fill"></span></a>
             <a title="LinkedIn" class="readmore" href="https://www.linkedin.com/in/anthony-adam-psu/" target="_blank"><span class="bi bi-linkedin"></span></a>
             <a title="Github" class="readmore" href="https://github.com/antadam127" target="_blank"><span class="bi bi-github"></span></a>
+            <a title="Tableau" class="readmore" href="https://public.tableau.com/app/profile/anthony3165/vizzes" target="_blank"><span class="bi bi-bar-chart-line-fill"></span></a>
             <a title="Download Resume" class="readmore" href="resumes/Anthony Adam - Resume.pdf" target="_blank"><span class="bi bi-file-earmark-pdf-fill"></span></a>
           </div>
         </div>
