--- a/portfolio/items/object classification/index.html
+++ b/portfolio/items/object classification/index.html
@@ -21,6 +21,19 @@
         background-color: white;
       }
 
+      #background {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: 0;
+        visibility: hidden;
+        background: white;
+        opacity: 0;
+        transition: opacity 0.5s;
+      }
+
       .fullscreen {
         position: absolute;
         top: 0;
@@ -54,6 +67,7 @@
     <section id="demos" class="invisible">
       <p>Hold some objects up close to your webcam to get a real-time classification! When ready click "enable webcam" below and accept access to the webcam when the browser asks (check the top left of your window)</p>
 
+      <div id="background"></div>
       <div id="liveView" class="camView">
         <button id="webcamButton">Enable Webcam</button>
         <video id="webcam" autoplay muted width="640" height="480"></video>
