USA Compare Initialized and first functionality

--- a/portfolio/items/NBA Analysis/index.html
+++ b/portfolio/items/NBA Analysis/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" href="../mapbox-config/icon.svg" type="image/x-icon" />
+    <title>NBA Analysis</title>
+
     <script src="https://unpkg.com/deck.gl@^8.9.4/dist.min.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.css" rel="stylesheet" />
