--- a/portfolio/items/d3/earthwater.html
+++ b/portfolio/items/d3/earthwater.html
@@ -21,8 +21,8 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/d3-geo-polygon@1/dist/d3-geo-polygon.min.js"></script>    <title>TITLE</title> -->
     <style>
       .country {
-        /* fill: #ccc; */
-        fill: #222;
+        fill: #ccc;
+        /* fill: #222; */
         /* stroke: #000; */
         stroke: #555;
         /* stroke: darkred; */
@@ -40,8 +40,9 @@
         /* background: radial-gradient(circle, rgba(41,128,185,0.660280652866242) 0%, rgba(41,128,185,0.21760549363057324) 100%); */
         /* background: rgb(41,128,185); */
         /* background: radial-gradient(circle, rgba(41,128,185,0.7430832006369427) 0%, rgba(41,128,185,0.09021695859872614) 100%);       */
-        background: rgb(22, 117, 180);
-        background: radial-gradient(circle, rgba(22, 117, 180, 0.7590067675159236) 0%, rgba(41, 128, 185, 0.14117237261146498) 100%);
+        
+        /* background: rgb(22, 117, 180); */
+        /* background: radial-gradient(circle, rgba(22, 117, 180, 0.7590067675159236) 0%, rgba(41, 128, 185, 0.14117237261146498) 100%); */
       }
     </style>
   </head>
